[metadata]
name = colcon-cache
version = attr: colcon_cache.__version__
url = https://colcon.readthedocs.io
project_urls =
    Changelog = https://github.com/ruffsl/colcon-cache/milestones?direction=desc&sort=due_date&state=closed
    GitHub = https://github.com/ruffsl/colcon-cache/
author = Ruffin White
author_email = roxfoxpox@gmail.com
maintainer = Ruffin White
maintainer_email = roxfoxpox@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Plugins
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python
    Topic :: Software Development :: Build Tools
license = Apache License, Version 2.0
description = Extension for colcon to cache the processing of packages.
long_description = file: README.md
keywords = colcon

[options]
install_requires =
  colcon-core>=0.5.2
  dirhash
  GitPython
packages = find:
zip_safe = true

[options.extras_require]
test =
  flake8>=3.6.0
  flake8-blind-except
  flake8-builtins
  flake8-class-newline
  flake8-comprehensions
  flake8-deprecated
  flake8-docstrings
  flake8-import-order
  flake8-quotes
  mock
  pep8-naming
  pylint
  pytest
  pytest-cov
  scspell3k>=2.2

[options.packages.find]
exclude = test

[tool:pytest]
filterwarnings =
    error
    ignore::DeprecationWarning:scantree.*:
    ignore::PendingDeprecationWarning:scspell:
junit_suite_name = colcon-cache

[options.entry_points]
colcon_core.event_handler =
    cache_lockfile = colcon_cache.event_handler.lockfile:LockfileEventHandler
colcon_core.extension_point =
    colcon_cache.subverb = colcon_cache.subverb:CacheSubverbExtensionPoint
    colcon_cache.task = 
        # TODO: break this into it's own locl class
        lock = colcon_core.task:TaskExtensionPoint
    colcon_cache.verb_handler = colcon_cache.verb_handler:VerbHandlerExtensionPoint
colcon_core.verb =
    cache = colcon_cache.verb.cache:CacheVerb
colcon_core.package_augmentation =
    cache_dirhash = colcon_cache.package_augmentation.dirhash:DirhashPackageAugmentation
    cache_git = colcon_cache.package_augmentation.git:GitPackageAugmentation
colcon_core.package_selection =
    cache_key = colcon_cache.package_selection.key:KeyPackageSelection
    cache_modified = colcon_cache.package_selection.modified:ModifiedPackageSelection
    cache_valid = colcon_cache.package_selection.valid:ValidPackageSelection
colcon_cache.subverb =
    lock = colcon_cache.subverb.lock:LockCacheSubverb
    # info = colcon_cache.subverb.info:InfoCacheSubverb
colcon_cache.task.lock =
    dirhash = colcon_cache.task.lock.dirhash:DirhashLockTask
    git = colcon_cache.task.lock.git:GitLockTask
colcon_cache.verb_handler =
    build = colcon_cache.verb_handler.build:BuildVerbHandler
    cache = colcon_cache.verb_handler.cache:CacheVerbHandler
    list = colcon_cache.verb_handler.cache:CacheVerbHandler
    test = colcon_cache.verb_handler.test:TestVerbHandler

[flake8]
import-order-style = google

[coverage:run]
branch = True
source = colcon_cache
